<resources>
    <string name="app_name">Android Ninja V2</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="name">Name: </string>
    <string name="enter_your_name">Enter your name</string>
    <string name="age">Age:</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="gender">Gender:</string>
    <string name="male">male</string>
    <string name="female">Female</string>
    <string name="phone">Phone:</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="email">Email:</string>
    <string name="height">Height:</string>
    <string name="enter_your_height">Enter your height in cm</string>
    <string name="weight">Weight:</string>
    <string name="enter_your_weight">enter your weight</string>
    <string name="signup">Sign up</string>
    <string name="test">test</string>
</resources>